<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PremiereAppAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="app_id">249793981893687</string>
    <string name="oauth_name">Authenticating</string>
    <string name="tweet">Enter your Message here</string>
    <string name="label"><b>Type Something</b></string>
    <string name="post"><b>Post</b></string>
    <string name="userhint">Not logged in</string>
    <string name="auth_progress_title">Authenticating&#8230;</string>
    <string name="auth_progress_text">Fetching profile&#8230;</string>
    <string name="timeline_progress_title">Timeline&#8230;</string>
    <string name="timeline_progress_text">Fetching Home Timeline&#8230;</string>
    <string name="tweet_progress_title">Sending&#8280;</string>
    <string name="tweet_progress_text">Posting message</string>
    <string name="tweet_empty">You have to enter something</string>
    <string name="tweet_error">There was some kind of problem!</string>
    <string name="bad_value">Bad Value</string>
    <string name="empty">Nothing to show</string>
    <string name="refresh_timeline">Refresh Timeline</string>
    <string name="login_facebook">Se connecter avec Facebook</string>
    <string name="login_twitter">Se connecter avec Twitter</string>
    <string name="pseudo">Pseudo</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">Email</string>
    <string name="sex">Sexe</string>
    <string name="country">Pays</string>
    <string name="phone">Téléphone</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">S\'enregistrer</string>

</resources>
